--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#af6631</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <color name="tab_unselected">#999999</color>
 </resources>
