shortened animation time, added 1s wait on splashscreen, fixed choppiness problem with animation

--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -51,7 +51,7 @@
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
                 android:textSize="14pt"
-                android:visibility="gone"/>
+                android:visibility="invisible"/>
 
         </LinearLayout>
 
