--- a/app/src/main/res/layout/cell_shopping_list.xml
+++ b/app/src/main/res/layout/cell_shopping_list.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/half_standard_margin"
         android:labelFor="@id/cell_et"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@id/cell_et"
