--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black_overlay">#66000000</color>
 
     <color name="tab_unselected">#999999</color>
+
+    <color name="shopping_list_header_text">#545454</color>
 </resources>
