--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,5 +8,7 @@
         <attr name="metaButtonBarStyle" format="reference"/>
         <attr name="metaButtonBarButtonStyle" format="reference"/>
     </declare-styleable>
-
+    <declare-styleable name="SquareImageView">
+        <attr name="byHeight" format="boolean" />
+    </declare-styleable>
 </resources>
