--- a/app/src/main/res/layout/fragment_menus.xml
+++ b/app/src/main/res/layout/fragment_menus.xml
@@ -3,8 +3,37 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:weightSum="4">
+              android:weightSum="18">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:text="@string/featured_menus"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menus_featured_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:text="@string/my_menus"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menus_saved_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="12"
+        android:paddingTop="@dimen/half_standard_margin"/>
 
 </LinearLayout>
