--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="quarter_standard_margin">4dp</dimen>
 
     <dimen name="login_button_width">300dp</dimen>
+
+    <dimen name="placeholder_image_padding">20dp</dimen>
 </resources>
