--- a/app/src/main/res/layout/cell_menus_featured.xml
+++ b/app/src/main/res/layout/cell_menus_featured.xml
@@ -34,6 +34,7 @@
         android:text="This is a menu name blah blah blah how long can this go"
         android:textAlignment="center"
         android:maxLines="2"
+        android:ellipsize="end"
         android:textColor="@android:color/white"/>
 
 </RelativeLayout>
