--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -3,18 +3,4 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                tools:context="com.sonora.android.fragments.FeedFragment">
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/feed_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:clickable="true"
-        android:layout_margin="@dimen/standard_margin"
-        android:src="@drawable/ic_add"
-        app:fabSize="normal"/>
-
-</RelativeLayout>
+                tools:context="com.sonora.android.fragments.FeedFragment"/>
