--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,7 +8,13 @@
         <attr name="metaButtonBarStyle" format="reference"/>
         <attr name="metaButtonBarButtonStyle" format="reference"/>
     </declare-styleable>
+
     <declare-styleable name="SquareImageView">
         <attr name="byHeight" format="boolean" />
+    </declare-styleable>
+
+    <declare-styleable name="CircleView">
+        <attr name="cv_byHeight" format="boolean" />
+        <attr name="cv_color" format="color" />
     </declare-styleable>
 </resources>
