--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -17,7 +17,7 @@
             android:id="@+id/add_image_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?colorAccent"
+            android:background="@color/light_gray"
             android:focusable="true"
             app:byHeight="false"
             android:clickable="true">
