changed button bgs so they would have ripple effect

--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -120,7 +120,8 @@
                 android:id="@+id/button_add_ingredient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?colorAccent"
+                android:layout_marginBottom="@dimen/half_standard_margin"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:clickable="true"
                 android:text="@string/add_ingredient"
                 android:textColor="@android:color/white"/>
@@ -154,7 +155,7 @@
                 android:id="@+id/button_add_instruction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?colorAccent"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:clickable="true"
                 android:text="@string/add_instruction"
                 android:textColor="@android:color/white"/>
@@ -188,7 +189,7 @@
                 android:id="@+id/button_add_tag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?colorAccent"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:clickable="true"
                 android:text="@string/add_tag"
                 android:textColor="@android:color/white"/>
@@ -205,7 +206,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_margin"
-            android:background="?colorAccent"
+            android:background="@drawable/button_bg_primary"
             android:clickable="true"
             android:textColor="@android:color/white"
             android:text="@string/button_submit"/>
