--- a/app/src/main/res/layout/cell_ingredients_list.xml
+++ b/app/src/main/res/layout/cell_ingredients_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/half_standard_margin">
+    android:padding="@dimen/standard_margin">
 
     <TextView
         android:id="@+id/tv_ingredient_name"
