--- a/app/src/main/res/layout/cell_simple_text.xml
+++ b/app/src/main/res/layout/cell_simple_text.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/standard_margin">
+
+    <TextView
+        android:id="@+id/tv_simple_cell"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
