reworking image upload code

--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -73,6 +73,12 @@
 
         </LinearLayout>
 
+        <!-- RecyclerView top line -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/light_gray"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_recipe_components"
             android:layout_width="match_parent"
